plugins {
    // https://github.com/architectury/architectury-loom
    id 'dev.architectury.loom' version '1.11-SNAPSHOT' apply false

    // https://github.com/architectury/architectury-plugin
    id 'architectury-plugin' version '3.4-SNAPSHOT'

    id 'com.gradleup.shadow' version '8.3.6' apply false
}

architectury {
    minecraft = project.minecraft_version
}

allprojects {
    apply plugin: 'java'

    version = rootProject.mod_version
    group = rootProject.maven_group

    rootProject.ext.attrs = [
        modId                    : rootProject.mod_id,
        modVersion               : rootProject.mod_version,
        modLicense               : rootProject.mod_license,
        modAuthors               : rootProject.mod_authors,
        modName                  : rootProject.mod_name,
        modDescription           : rootProject.mod_description,
        modHomepage              : rootProject.mod_homepage,
        modSource                : rootProject.mod_source,
        minecraftVersion         : rootProject.minecraft_version,
        fabricLoaderVersion      : rootProject.fabric_loader_version,
        architecturyApiVersion   : rootProject.architectury_api_version,
        forgeConfigApiPortVersion: rootProject.forge_config_api_port_version,
    ]

    repositories {
        maven { url 'https://jitpack.io' }
        maven { url 'https://api.modrinth.com/maven' }
        maven { url 'https://maven.shedaniel.me' }
        maven { url 'https://maven.terraformersmc.com/releases/' }
        maven { url 'https://raw.githubusercontent.com/Fuzss/modresources/main/maven/' }

        maven {
            url 'https://modmaven.dev/'
            content { includeGroup 'appeng' }
        }
    }
}

subprojects {
    apply plugin: 'dev.architectury.loom'
    apply plugin: 'architectury-plugin'
    apply plugin: 'maven-publish'

    base {
        archivesName = "$rootProject.mod_name-$rootProject.minecraft_version"
    }

    loom {
        silentMojangMappingsLicense()
    }

    dependencies {
        minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"

        mappings loom.layered {
            it.mappings("net.fabricmc:yarn:$rootProject.minecraft_version+$rootProject.yarn_mappings_version:v2")
            it.mappings("dev.architectury:yarn-mappings-patch-neoforge:$rootProject.yarn_mappings_patch_neoforge_version")
        }
    }

    java {
        withSourcesJar()

        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 21
    }
}
